[metadata]
name = kurtzweil
version = 0.0.1
author = Joseph Haaga
author_email = haaga.joe@gmail.com
description = A test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josephhaaga/kurtzweil/
project_urls =
    Bug Tracker = https://github.com/josephhaaga/kurtzweil/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    build*
    dist*
    tests*
    venv*
